test/compile-fail/resolution/type-existence/not-trait/expected.txt
error: expected trait, found type `b`
 --> top.rhdl:1:12
  |
1 | struct a<T: b> {}
  |             ^ not a trait
